dom/base/Document.cpp
@@ -12261,26 +12261,42 @@ static nsINode* GetCorrespondingNodeInDocument(const nsINode* aOrigNode,
   MOZ_ASSERT(aOrigNode);
 
   // Selections in anonymous subtrees aren't supported.
-  if (aOrigNode->IsInNativeAnonymousSubtree() || aOrigNode->IsInShadowTree()) {
+  if (NS_WARN_IF(aOrigNode->IsInNativeAnonymousSubtree())) {
     return nullptr;
   }
 
   nsTArray<int32_t> indexArray;
-  const nsINode* child = aOrigNode;
-  while (const nsINode* parent = child->GetParentNode()) {
-    int32_t index = parent->ComputeIndexOf(child);
+  const nsINode* current = aOrigNode;
+  while (const nsINode* parent = current->GetParentNode()) {
+    int32_t index = parent->ComputeIndexOf(current);
     MOZ_ASSERT(index >= 0);
     indexArray.AppendElement(index);
-    child = parent;
+    current = parent;
   }
-  MOZ_ASSERT(child->IsDocument());
+  MOZ_ASSERT(current->IsDocument() || current->IsShadowRoot());
+  nsINode* correspondingNode = [&]() -> nsINode* {
+    if (current->IsDocument()) {
+      return &aStaticClone;
+    }
+    const auto* shadow = ShadowRoot::FromNode(*current);
+    if (!shadow) {
+      return nullptr;
+    }
+    nsINode* correspondingHost =
+        GetCorrespondingNodeInDocument(shadow->Host(), aStaticClone);
+    if (NS_WARN_IF(!correspondingHost || !correspondingHost->IsElement())) {
+      return nullptr;
+    }
+    return correspondingHost->AsElement()->GetShadowRoot();
+  }();
 
-  nsINode* correspondingNode = &aStaticClone;
+  if (NS_WARN_IF(!correspondingNode)) {
+    return nullptr;
+  }
   for (int32_t i : Reversed(indexArray)) {
     correspondingNode = correspondingNode->GetChildAt_Deprecated(i);
     NS_ENSURE_TRUE(correspondingNode, nullptr);
   }
-
   return correspondingNode;
 }
 
@@ -12342,7 +12358,7 @@ static void CachePrintSelectionRanges(const Document& aSourceDoc,
     nsINode* endNode =
         GetCorrespondingNodeInDocument(endContainer, aStaticClone);
 
-    if (!startNode || !endNode) {
+    if (NS_WARN_IF(!startNode || !endNode)) {
       continue;
     }
 
